--- a/routes/users_management/form.html
+++ b/routes/users_management/form.html
@@ -1,9 +1,17 @@
 <html>
    <body>
       
-      <form action = "http://35.188.176.184:80/user_registration" method = "POST">
-         UserName: <input type = "text" name = "UserName">  <br>
-         Password: <input type = "password" name = "Password">
+      <form action = "http://127.0.0.1:5000/user_registration" method = "POST">
+          StaffNo: <input type = "text" name = "StaffNo">  <br>
+		  FirstName: <input type = "text" name = "FirstName">  <br>
+		  MiddleName: <input type = "text" name = "MiddleName">  <br>
+		  Surname: <input type = "text" name = "Surname">  <br>
+		  Gender: <input type = "text" name = "Gender">  <br>
+		  DOB: <input type = "text" name = "DOB">  <br>
+		  NationalId: <input type = "text" name = "NationalId">  <br>
+		  Email: <input type = "text" name = "Email">  <br>
+		  PhysicalAddress: <input type = "text" name = "PhysicalAddress">  <br>
+          Password: <input type = "password" name = "Password">
          <input type = "submit" value = "Submit">
       </form>
       
