--- a/routes/users_management/login_form.html
+++ b/routes/users_management/login_form.html
@@ -1,8 +1,8 @@
 <html>
    <body>
       
-      <form action = "http://35.188.176.184:80/user_login" method = "POST">
-         UserName: <input type = "text" name = "AttemptedUserName">  <br>
+      <form action = "http://127.0.0.1:5000/user_login" method = "POST">
+         AttemptedStaffNo: <input type = "text" name = "AttemptedStaffNo">  <br>
          Password: <input type = "password" name = "AttemptedPassword">
          <input type = "submit" value = "Submit">
       </form>
